--- a/doc/dissertation/content/low_order/low_order_scheme_system.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_system.tex
@@ -1,44 +1,32 @@
 Starting with Equation \eqref{eq:vector_weak_form}, the low-order scheme
 lumps the mass matrix and adds a low-order artificial diffusion term:
-\begin{equation}
-   \lumpedmassentry\ddt{\solutionletter_i}
-     + \sumj\gradiententry\cdot\consfluxinterpolant_j(\timevalue)
-     + \sumj\diffusionmatrixletter\ij^{L}(\timevalue)\solutionletter_j
-     = 0 \eqc
-\end{equation}
+    \begin{equation}
+      \lumpedmassentry
+        \frac{\solutionvector_i^{L,n+1}-\solutionvector_i^n}{\dt}
+        + \sum_j\gradiententry\cdot\consfluxinterpolant_j^n
+        + \sum_j\diffusionmatrixletter\ij^{L,n}\solutionvector_j^n
+        = \ssrhs_i^n \eqc
+    \end{equation}
 where the low-order artificial diffusion matrix $\loworderdiffusionmatrix$
 is given in the following definition:
 %--------------------------------------------------------------------------------
 \begin{definition}{Low-Order Artificial Diffusion Matrix}
    The low-order artificial diffusion matrix $\loworderdiffusionmatrix[\timeindex]$
    is defined as
-   \begin{subequations}\label{eq:low_order_diffusion_matrix_system}
-   \begin{equation}
-     \diffusionmatrixletter\ij^{L,\timeindex} \equiv
-       \nodequantity{\diffusionmatrixletter}^{L,\timeindex}\nodeij \eqc
+    \begin{equation}
+      \diffusionmatrixletter^{L,n}\ij \equiv
+        \max(\maxwavespeed\ij\ltwonorm{\mathbf{\gradientmatrixletter}\ij},
+          \maxwavespeed\ji\ltwonorm{\mathbf{\gradientmatrixletter}\ji})
+      \quad j\ne i \eqc \quad
+      \diffusionmatrixletter^{L,n}_{i,i} \equiv
+        -\sumjnoti\diffusionmatrixletter^{L,n}\ij
+      \eqc
    \end{equation}
-   \begin{equation}
-     \nodequantity{\diffusionmatrixletter}^{L,\timeindex}\kl \equiv
-       \max(\maxwavespeed(\nodequantity{\normalvector}\kl,
-         \nodequantity{\solutionvector}_k^\timeindex,
-         \nodequantity{\solutionvector}_\ell^\timeindex)
-         \ltwonorm{\nodequantity{\mathbf{\gradientmatrixletter}}\kl},\;
-         \maxwavespeed(\nodequantity{\normalvector}\lk,
-         \nodequantity{\solutionvector}_\ell^\timeindex,
-         \nodequantity{\solutionvector}_k^\timeindex)
-         \ltwonorm{\nodequantity{\mathbf{\gradientmatrixletter}}\lk}
-       )
-     \eqc
-   \end{equation}
-   \end{subequations}
-   where $\maxwavespeed(\nodequantity{\normalvector}\kl,
-         \nodequantity{\solutionvector}_k^\timeindex,
-         \nodequantity{\solutionvector}_\ell^\timeindex)$
-  is the maximum wave speed in the 1-D Riemann problem in the direction
-  $\nodequantity{\normalvector}\kl \equiv
-  \nodequantity{\mathbf{\gradientmatrixletter}}\kl /
-  \ltwonorm{\nodequantity{\mathbf{\gradientmatrixletter}}\kl}$
-  with left state $\nodequantity{\solutionvector}_k^\timeindex$ and right state
-  $\nodequantity{\solutionvector}_\ell^\timeindex$.
+   where $\maxwavespeed\ij \equiv \maxwavespeed(
+   \normalvector\ij,\solutionvector_i^n,\solutionvector_j^n)$
+   is the maximum wave speed in the 1-D Riemann problem in the direction
+   $\normalvector\ij \equiv \mathbf{\gradientmatrixletter}\ij /
+   \ltwonorm{\mathbf{\gradientmatrixletter}\ij}$
+   with left state $\solutionvector_i^n$ and right state $\solutionvector_j^n$.
 \end{definition}
 %--------------------------------------------------------------------------------
