--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -1,152 +1,172 @@
-@inproceedings{goutal1997,
-  author = {N. Goutal and F. Maurel},
-  title = {Technical Report HE-43/97/016/A},
-  booktitle = {Proceedings of the 2nd Workshop on Dam-Break Wave Simulation},
-  year = {1997},
-  organization = {Electricit de France, Department Laboratoire National
-    d'Hydraulique, Groupe Hydraulique Fluviale}
+% This file was created with JabRef 2.10b2.
+% Encoding: UTF-8
+
+
+@Article{dealii,
+  Title                    = {{deal.II} -- a General Purpose Object Oriented Finite Element Library},
+  Author                   = {W. Bangerth and R. Hartmann and G. Kanschat},
+  Journal                  = {ACM Transactions on Mathematical Software},
+  Year                     = {2007},
+  Number                   = {4},
+  Pages                    = {24/1--24/27},
+  Volume                   = {33}
 }
 
-@article{fjordholm2011,
- author = {Fjordholm, Ulrik S. and Mishra, Siddhartha and Tadmor, Eitan},
- title = {Well-balanced and Energy Stable Schemes for the Shallow Water Equations with Discontinuous Topography},
- journal = {J. Comput. Phys.},
- issue_date = {June, 2011},
- volume = {230},
- number = {14},
- month = jun,
- year = {2011},
- issn = {0021-9991},
- pages = {5587--5609},
- numpages = {23},
- url = {http://dx.doi.org/10.1016/j.jcp.2011.03.042},
- doi = {10.1016/j.jcp.2011.03.042},
- acmid = {1982737},
- publisher = {Academic Press Professional, Inc.},
- address = {San Diego, CA, USA},
- keywords = {Eddy viscosity, Energy preserving schemes, Energy stable schemes, Numerical diffusion, Shallow water equations},
+@Article{borisbook,
+  Title                    = {I. {SHASTA}, A Fluid Transport Algorithm that Works},
+  Author                   = {Jay P. Boris and David L. Book},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {1997},
+  Pages                    = {172--186},
+  Volume                   = {135}
 }
 
-@incollection{chen2013,
-  year={2013},
-  isbn={978-3-642-33220-3},
-  booktitle={Recent Developments in the Numerics of Nonlinear Hyperbolic Conservation Laws},
-  volume={120},
-  series={Notes on Numerical Fluid Mechanics and Multidisciplinary Design},
-  editor={Ansorge, Rainer and Bijl, Hester and Meister, Andreas and Sonar, Thomas},
-  doi={10.1007/978-3-642-33221-0_8},
-  title={An Adaptive Artificial Viscosity Method for the Saint-Venant System},
-  url={http://dx.doi.org/10.1007/978-3-642-33221-0_8},
-  publisher={Springer Berlin Heidelberg},
-  author={Chen, Yunlong and Kurganov, Alexander and Lei, Minlan and Liu, Yu},
-  pages={125-141},
-  language={English}
+@InCollection{chen2013,
+  Title                    = {An Adaptive Artificial Viscosity Method for the Saint-Venant System},
+  Author                   = {Chen, Yunlong and Kurganov, Alexander and Lei, Minlan and Liu, Yu},
+  Booktitle                = {Recent Developments in the Numerics of Nonlinear Hyperbolic Conservation Laws},
+  Publisher                = {Springer Berlin Heidelberg},
+  Year                     = {2013},
+  Editor                   = {Ansorge, Rainer and Bijl, Hester and Meister, Andreas and Sonar, Thomas},
+  Pages                    = {125-141},
+  Series                   = {Notes on Numerical Fluid Mechanics and Multidisciplinary Design},
+  Volume                   = {120},
+
+  Doi                      = {10.1007/978-3-642-33221-0_8},
+  ISBN                     = {978-3-642-33220-3},
+  Language                 = {English},
+  Url                      = {http://dx.doi.org/10.1007/978-3-642-33221-0_8}
 }
 
-@article{vukovic2002,
-  title = "{ENO} and {WENO} Schemes with the Exact Conservation Property for One-Dimensional Shallow Water Equations",
-  journal = "Journal of Computational Physics ",
-  volume = "179",
-  number = "2",
-  pages = "593 - 621",
-  year = "2002",
-  note = "",
-  issn = "0021-9991",
-  doi = "http://dx.doi.org/10.1006/jcph.2002.7076",
-  url = "http://www.sciencedirect.com/science/article/pii/S0021999102970762",
-  author = "Senka Vukovic and Luka Sopta"
+@Article{fjordholm2011,
+  Title                    = {Well-balanced and Energy Stable Schemes for the Shallow Water Equations with Discontinuous Topography},
+  Author                   = {Fjordholm, Ulrik S. and Mishra, Siddhartha and Tadmor, Eitan},
+  Journal                  = {J. Comput. Phys.},
+  Year                     = {2011},
+
+  Month                    = jun,
+  Number                   = {14},
+  Pages                    = {5587--5609},
+  Volume                   = {230},
+
+  Acmid                    = {1982737},
+  Address                  = {San Diego, CA, USA},
+  Doi                      = {10.1016/j.jcp.2011.03.042},
+  ISSN                     = {0021-9991},
+  Issue_date               = {June, 2011},
+  Keywords                 = {Eddy viscosity, Energy preserving schemes, Energy stable schemes, Numerical diffusion, Shallow water equations},
+  Numpages                 = {23},
+  Publisher                = {Academic Press Professional, Inc.},
+  Url                      = {http://dx.doi.org/10.1016/j.jcp.2011.03.042}
 }
 
-@article{guermond_ev,
-  author = "Jean-Luc Guermond and Richard Pasquetti and Bojan Popov",
-  title = "Entropy Viscosity Method for Nonlinear Conservation Laws",
-  journal = "Journal of Computational Physics",
-  volume = "230",
-  pages = "4248--4267",
-  year = "2011",
+@InProceedings{goutal1997,
+  Title                    = {Technical Report HE-43/97/016/A},
+  Author                   = {N. Goutal and F. Maurel},
+  Booktitle                = {Proceedings of the 2nd Workshop on Dam-Break Wave Simulation},
+  Year                     = {1997},
+  Organization             = {Electricit de France, Department Laboratoire National d'Hydraulique, Groupe Hydraulique Fluviale}
 }
 
-@article{guermond_firstorder,
-  author = "Jean-Luc Guermond and Murtazo Nazarov",
-  title = "A Maximum-Principle Preserving $C^0$ Finite Element Method for Scalar Conservation Equations",
-  journal = "Computational Methods in Applied Mechanics and Engineering",
-  volume = "272",
-  pages = "198--213",
-  year = "2014",
+@Article{guermond_firstorder,
+  Title                    = {A Maximum-Principle Preserving $C^0$ Finite Element Method for Scalar Conservation Equations},
+  Author                   = {Jean-Luc Guermond and Murtazo Nazarov},
+  Journal                  = {Computational Methods in Applied Mechanics and Engineering},
+  Year                     = {2014},
+  Pages                    = {198--213},
+  Volume                   = {272}
 }
 
-@article{guermond_secondorder,
-  author = "Jean-Luc Guermond and Murtazo Nazarov and Bojan Popov and Yong Yang",
-  title = "A Second-Order Maximum Principle Preserving Lagrange Finite Element Technique for Nonlinear
-           Scalar Conservation Equations",
-  journal = "SIAM Journal on Numerical Analysis",
-  volume = "52",
-  pages = "2163--2182",
-  year = "2014",
+@Article{guermond_secondorder,
+  Title                    = {A Second-Order Maximum Principle Preserving Lagrange Finite Element Technique for Nonlinear Scalar Conservation Equations},
+  Author                   = {Jean-Luc Guermond and Murtazo Nazarov and Bojan Popov and Yong Yang},
+  Journal                  = {SIAM Journal on Numerical Analysis},
+  Year                     = {2014},
+  Pages                    = {2163--2182},
+  Volume                   = {52}
 }
 
-@unpublished{guermond_invariantdomain,
-  author = "Jean-Luc Guermond and Bojan Popov",
-  title = "Invariant Domains and First-Order Continuous Finite Element
-    Approximation for Hyperbolic Systems",
-  year = "2015"
+@Article{guermond_ev,
+  Title                    = {Entropy Viscosity Method for Nonlinear Conservation Laws},
+  Author                   = {Jean-Luc Guermond and Richard Pasquetti and Bojan Popov},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {2011},
+  Pages                    = {4248--4267},
+  Volume                   = {230}
 }
 
-@article{borisbook,
-  author = "Jay P. Boris and David L. Book",
-  title = "I. {SHASTA}, A Fluid Transport Algorithm that Works",
-  journal = "Journal of Computational Physics",
-  volume = "135",
-  pages = "172--186",
-  year = "1997",
+@Unpublished{guermond_invariantdomain,
+  Title                    = {Invariant Domains and First-Order Continuous Finite Element Approximation for Hyperbolic Systems},
+  Author                   = {Jean-Luc Guermond and Bojan Popov},
+  Note                     = {Electronic preprint, arXiv:1509.07461v1 [math.NA]},
+  Year                     = {2015}
 }
 
-@book{kuzmin_FCT,
-  author = "D. Kuzmin and R. L{\"o}hner and S. Turek",
-  title = "Flux-Corrected Transport",
-  edition = "First",
-  publisher = "Springer-Verlag Berlin Heidelberg",
-  address = "Germany",
-  year = "2005",
+@Unpublished{kuzmin_transport,
+  Title                    = {A Guide to Numerical Methods for Transport Equations},
+  Author                   = {D. Kuzmin},
+  Note                     = {Unfinished electronic book},
+  Year                     = {2010},
+
+  Institution              = {Friedrich-Alexander-Universit{\"a}t Erlangen-N{\"u}rnberg}
 }
 
-@unpublished{kuzmin_transport,
-  author = "D. Kuzmin",
-  title = "A Guide to Numerical Methods for Transport Equations",
-  note = "Unfinished book",
-  institution = "Friedrich-Alexander-Universit{\"a}t Erlangen-N{\"u}rnberg",
-  year = "2010",
+@Book{kuzmin_FCT,
+  Title                    = {Flux-Corrected Transport},
+  Author                   = {D. Kuzmin and R. L{\"o}hner and S. Turek},
+  Publisher                = {Springer-Verlag Berlin Heidelberg},
+  Year                     = {2005},
+
+  Address                  = {Germany},
+  Edition                  = {First}
 }
 
-@article{zalesak,
-  author = "Steven T. Zalesak",
-  title = "Fully Multidimensional Flux-Corrected Transport Algorithms for Fluids",
-  journal = "Journal of Computational Physics",
-  volume = "31",
-  pages = "335--362",
-  year = "1979",
+@Article{kuzmin_failsafe,
+  Title                    = {Failsafe Flux Limiting and Constrained Data Projections for Equations of Gas Dynamics},
+  Author                   = {Dmitri Kuzmin and Matthias M{\"o}ller and John N. Shadid and Mikhail Shashkov},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {2010},
+
+  Doi                      = {10.1016/j.jcp.2010.08.009},
+  Owner                    = {joshua},
+  Timestamp                = {2016.01.13}
 }
 
-@book{leveque2002,
-	author = "Randall J. LeVeque",
-	title = "Finite Volume Methods for Hyperbolic Problems",
-	year = "2002",
-	publisher = "Cambridge University Press"
+@Book{leveque2002,
+  Title                    = {Finite Volume Methods for Hyperbolic Problems},
+  Author                   = {Randall J. LeVeque},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2002}
 }
 
-@book{toro2009,
-	author = "Eleuterio F. Toro",
-	title = "Riemann Solvers and Numerical Methods for Fluid Dynamics",
-	year = "2009",
-	publisher = "Springer-Verlag Berlin Heidelberg",
-	edition = "3rd"
+@Book{toro2009,
+  Title                    = {Riemann Solvers and Numerical Methods for Fluid Dynamics},
+  Author                   = {Eleuterio F. Toro},
+  Publisher                = {Springer-Verlag Berlin Heidelberg},
+  Year                     = {2009},
+  Edition                  = {3rd}
 }
 
-@article{dealii,
-  title = {The \texttt{deal.II} Library, Version 8.3},
-  author = {W. Bangerth and T. Heister and L. Heltai
-            and G. Kanschat and M. Kronbichler
-            and M. Maier and B. Turcksin},
-  journal = {preprint},
-  year = {2015},
+@Article{vukovic2002,
+  Title                    = {{ENO} and {WENO} Schemes with the Exact Conservation Property for One-Dimensional Shallow Water Equations},
+  Author                   = {Senka Vukovic and Luka Sopta},
+  Journal                  = {Journal of Computational Physics },
+  Year                     = {2002},
+  Number                   = {2},
+  Pages                    = {593 - 621},
+  Volume                   = {179},
+
+  Doi                      = {http://dx.doi.org/10.1006/jcph.2002.7076},
+  ISSN                     = {0021-9991},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0021999102970762}
 }
+
+@Article{zalesak,
+  Title                    = {Fully Multidimensional Flux-Corrected Transport Algorithms for Fluids},
+  Author                   = {Steven T. Zalesak},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {1979},
+  Pages                    = {335--362},
+  Volume                   = {31}
+}
+
