--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -26,12 +26,12 @@
 \usepackage[mathscr]{euscript} % for \mathscr{} in math mode
 \usepackage[hidelinks]{hyperref}
 
-% input user-defined commands
-\input{content/newcommands}
-\input{content/theorems_dissertation}
-
 % create path to content directory
 \newcommand{\contentdir}{content}
+
+% input user-defined commands
+\input{\contentdir/newcommands}
+\input{\contentdir/theorems_dissertation}
 
 % create black bar where there are "Overfull"s
 \overfullrule=1cm
