more work on proposal

--- a/doc/dissertation/content/introduction/purpose.tex
+++ b/doc/dissertation/content/introduction/purpose.tex
@@ -42,5 +42,5 @@ dissertation employs the notion of an entropy-based artificial viscosity,
 based on the recent work of Guermond et al.\cite{guermond_ev}.
 The notion of entropy stems from
 thermodynamics, in which entropy is a non-decreasing function of time, whereas
-the concept of entropy in mathematics is usually viewed as the opposite: it is
+in mathematics, the concept of entropy is usually viewed as the opposite: it is
 a non-\emph{increasing} function of time.
