--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -336,7 +336,8 @@
   {\hline\end{tabular}\end{center}\end{table}}
 
 % references commands
-\newcommand{\refsec}[1]{, \S#1}
+%\newcommand{\refsec}[1]{, \S#1}
+\newcommand{\refsec}[1]{}
 
 % algorithm shortcuts
 \newcommand{\objective}{\phi}
