--- a/doc/proposal/proposal.tex
+++ b/doc/proposal/proposal.tex
@@ -4,7 +4,6 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{subcaption}
-%\usepackage[mathscr]{euscript} % for \mathscr{} in math mode
 \usepackage[hidelinks]{hyperref}
 
 % create path commands
@@ -15,9 +14,9 @@
 \input{\contentdir/newcommands}
 \input{\contentdir/theorems_dissertation}
 
-%===============================================================================
+%###############################################################################
 % Document
-%===============================================================================
+%###############################################################################
 \begin{document}
 
 \begin{center}
@@ -35,9 +34,9 @@
   Joshua E. Hansel
 \end{center}
 
-%===============================================================================
+%###############################################################################
 \section{Introduction}
-%===============================================================================
+%###############################################################################
 \input{\contentdir/introduction/purpose}
 
 The organization of this proposal is as follows.
@@ -49,30 +48,39 @@ algorithm.
 Section \ref{sec:results} gives a sample of preliminary results.
 Section \ref{sec:goals} discusses the goals of this research.
 Section \ref{sec:conclusions} gives a summary and conclusions of this proposal.
-%===============================================================================
+%###############################################################################
 \section{Problem Formulation\label{sec:problem_formulation}}
+%###############################################################################
 %===============================================================================
-%-------------------------------------------------------------------------------
 \subsection{Physical Models}
-%-------------------------------------------------------------------------------
-\subsubsection{Scalar Transport}
-%-------------------------------------------------------------------------------
 %===============================================================================
+%-------------------------------------------------------------------------------
+\subsubsection{Scalar Transport\label{sec:scalar_model}}
+%-------------------------------------------------------------------------------
+\input{\contentdir/preliminaries/scalar}
+%-------------------------------------------------------------------------------
+\subsubsection{The Shallow Water Equations\label{sec:sw_model}}
+%-------------------------------------------------------------------------------
+\input{\contentdir/preliminaries/shallowwater}
+%###############################################################################
 \section{Methodology\label{sec:methodology}}
-%===============================================================================
-%===============================================================================
+%###############################################################################
+%###############################################################################
 \section{Preliminary Results\label{sec:results}}
-%===============================================================================
-%===============================================================================
+%###############################################################################
+\input{results}
+%###############################################################################
 \section{Research Goals\label{sec:goals}}
-%===============================================================================
-%===============================================================================
+%###############################################################################
+\input{goals}
+%###############################################################################
 \section{Conclusions\label{sec:conclusions}}
-%===============================================================================
+%###############################################################################
+\input{conclusions}
 
-%===============================================================================
+%###############################################################################
 \bibliographystyle{plain}
 \bibliography{\refdir/references}
-%===============================================================================
+%###############################################################################
 
 \end{document}
