--- a/doc/dissertation/content/preliminaries/scalar.tex
+++ b/doc/dissertation/content/preliminaries/scalar.tex
@@ -13,7 +13,7 @@ term. This notation will be used throughout this document to keep
 the analysis as general as possible; radiation transport notation
 will only be adopted when assumptions are needed.
 
-Scalar radiation transport,
+A Scalar radiation transport equation,
 \begin{equation}\label{eq:rad_transport}
   \frac{1}{\speed}\ppt{\angularflux} + \directionvector\cdot\nabla\angularflux\xt
   + \totalcrosssection(\x)\angularflux\xt = \radiationsource\xt \eqc
@@ -38,10 +38,10 @@ is the macroscopic total cross-section, and $\radiationsource\xt$ is the
 total source (extraneous plus scattering).
 
 To complete the problem formulation, boundary
-conditions must be provided, as well as intitial conditions if the
+conditions must be provided, as well as initial conditions if the
 problem is transient:
 \begin{equation}
-   \scalarsolution\xt = \scalarsolution^0(\x)
+   \scalarsolution(\x,0) = \scalarsolution^0(\x)
    \quad \forall \x\in\domain \eqp
 \end{equation}
 Boundary conditions will depend on the chosen conservation law and
